--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ categories = ["web-programming", "web-programming::http-server"]
 
 [dependencies]
 actix-service = "1.0.6"
-actix-web = { version = "3", default-features = false }
+actix-web = { version = "4.0.0-beta.6", default-features = false }
 futures = "0.3"
 
 [badges]
